2005-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c: Change how Jasper is intialized.  Hopefully
	eliminate memory leak when reading ICC color profile.
	* Overall: Compilation warning elimination with GCC 4.0.1.
	* magick/utility.c (SystemCommand): Always report error status if
	a command fails.

2005-07-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* zlib: Updated to version 1.2.3.
	* coders/dpx.c: Use TriangleFilter for scaling chroma.

2005-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c: Support proper encode and decode of YCbCr video
	levels.
	* magick/colorspace.c: Support Rec709YCbCrColorspace colorspace.

2005-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/{animate.c, display.c, import.c, xwindow.c}: Rename all
	symbols starting with 'X' so that they are prefixed with 'Magick'.
	This eases maintenance since it is almost impossible to understand
	code which pretends to be the X11 libraries.  The few programs
	which use the GraphicsMagick 'X' functions will need to alter the
	symbol names they use.  Sorry.
	* magick/command.c (DisplayImageCommand): Don't invoke
	XrmDestroyDatabase() to destroy the resource database associated
	with the display since it seems that XCloseDisplay() does this for
	us.
	* magick/image.c (DisplayImages): Don't invoke
	XrmDestroyDatabase() to destroy the resource database associated
	with the display since it seems that XCloseDisplay() does this for
	us.
	* coders/uyvy.c: Enforce image width restrictions.
	* coders/dpx.c: Enforce image width restrictions when subsampling.

2005-07-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c: Support reading and writing subsampled CbYCr
	images.  Colorimetery is not right yet.
	* magick/colorspace.h (enum Rec709YCbCrColorspace): New
	enumeration for Rec. 709 YcBCr colorspace.

2005-06-21 Glenn Randers-Pehrson <glennrp@glennrp.com>

	* coders/png.c: Fixed a problem with reading 16-bit PNG images