@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.2"
-#define public MagickPackageVersionAddendum ".020050727"
+#define public MagickPackageVersionAddendum ".020050731"
 #define public MagickPackageReleaseDate "unreleased"
