@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2005-07-31  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/dpx.c: Support the little-endian 10-bit packed format as
+        used by the Library Of Congress.
+
+</UL>
+<p>
 2005-07-27  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
